CRUD PRODUCTOS Multi Languaje Hibernate

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,7 +2,26 @@
 # Product
 #-----------------------------------------------------------
 product.Title = Producto
-product.Create = Crear
-product.Edit = Editar
-product.Delete = Eliminar
-product.View = Ver
+
+#Atributos Product
+product.Code=Código
+product.Description=Descripción
+product.Price = Precio
+
+#-----------------------------------------------------------
+# Otros
+#-----------------------------------------------------------
+
+# Tabla
+table.Action=Acciónes
+
+# Acciones
+action.Create = Crear
+action.Edit = Editar
+action.Delete = Eliminar
+action.View = Ver
+action.confirm=Esta seguro?
+idioma.Español=Español
+idioma.English=Ingles
+idioma.Italiano=Italiano
+idioma.Idioma=Idioma
