--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,8 +1,24 @@
+
 #-----------------------------------------------------------
 # Product
 #-----------------------------------------------------------
+idioma.Idioma=Languaje
 product.Title = Product
-product.Create = Create
-product.Edit = Edit
-product.Delete = Delete
-product.View = View
+
+#Atributos
+product.Code = Code
+product.Description = Description
+product.Price = Price
+
+# Tabla
+table.Action = Action
+
+# Acciones
+action.Create = Create
+action.Edit = Edit
+action.Delete = Delete
+action.View = View
+action.confirm=Are you sure?
+idioma.Español=Spanish
+idioma.English=English
+idioma.Italiano=Italian
