--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -21,3 +21,4 @@ action.confirm=Esta seguro?
 idioma.Español=Español
 idioma.English=Ingles
 idioma.Italiano=Italiano
+product.create.Title=Crear Producto
