Header Footer Main Multilange

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -26,3 +26,10 @@ idioma.English=Ingles
 idioma.Italiano=Italiano
 idioma.Idioma=Idioma
 product.create.Title=Crear Producto
+header.Home=Inicio
+header.Products=Productos
+login.Title=Inicio de Sesion
+login.Login=Acceder
+main.Title=Principal
+main.Welcome=Bienvenidos!
+header.SingOut=Salir
