--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -23,3 +23,10 @@ idioma.Español=Spanish
 idioma.English=English
 idioma.Italiano=Italian
 product.create.Title=Product Create
+header.Home=Home
+header.Products=Products
+login.Title=Sign In
+login.Login=Sing In
+main.Title=Main
+main.Welcome=Welcome!
+header.SingOut=Sing Out
