--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -22,3 +22,10 @@ idioma.Español=Español
 idioma.English=Ingles
 idioma.Italiano=Italiano
 product.create.Title=Crear Producto
+header.Home=Inicio
+header.Products=Productos
+login.Title=Inicio de Sesion
+login.Login=Acceder
+main.Title=Principal
+main.Welcome=Bienvenidos!
+header.SingOut=Salir
