Multi lenguaje Italiano Correccion Error en footer del multi languje

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -20,7 +20,7 @@ action.Create = Crear
 action.Edit = Editar
 action.Delete = Eliminar
 action.View = Ver
-action.confirm=Esta seguro?
+action.Confirm=Esta seguro?
 idioma.Español=Español
 idioma.English=Ingles
 idioma.Italiano=Italiano
