--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -18,7 +18,7 @@ action.Create = Create
 action.Edit = Edit
 action.Delete = Delete
 action.View = View
-action.confirm=Are you sure?
+action.Confirm=Are you sure?
 idioma.Español=Spanish
 idioma.English=English
 idioma.Italiano=Italian
