--- a/src/main/resources/messages_it.properties
+++ b/src/main/resources/messages_it.properties
@@ -1,20 +1,31 @@
 #-----------------------------------------------------------
 # Product
 #-----------------------------------------------------------
-product.Title = Producto
+product.Title=Prodotto
 
 #Atributos
-product.Code=Código
-product.Description=Descripción
-product.Price = Precio
+product.Code=Codice
+product.Description=Descrizione
+product.Price=Prezzo
 
 # Tabla
-table.Action=Acciónes
+table.Action=Azioni
 
 # Acciones
-action.Create = Crear
-action.Edit = Editar
-action.Delete = Eliminar
-action.View = Ver
-action.confirm=Esta seguro?
+action.Create=Creare
+action.Edit=Modificare
+action.Delete=Eliminare
+action.View=Vedere
+action.Confirm=Sei sicuro?
 idioma.Italiano=Italiano
+header.Home=Inizio
+header.Products=Prodotti
+header.SingOut=Esci
+idioma.English=Inglese
+idioma.Español=Spagnolo
+idioma.Idioma=Lingua
+login.Login=Accedere
+login.Title=Login
+main.Title=Maggiore
+main.Welcome=Benvenuto!
+product.create.Title=Crea Prodotto
