Multi lenguaje errores Marcar error en inputs

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -30,3 +30,13 @@ login.Login=Sing In
 main.Title=Main
 main.Welcome=Welcome!
 header.SingOut=Sing Out
+action.Back=Back
+action.Submit=Submit
+error.Empty=The field cannot be empty
+error.Negative=The value cannot be less than 0
+product.Type=Type
+product.Measure=Measure
+product.Measure=Measure
+product.IvaFee=IVA
+product.edit.Title=Modify Product
+product.view.Title=Product View
