--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -29,3 +29,12 @@ login.Login=Acceder
 main.Title=Principal
 main.Welcome=Bienvenidos!
 header.SingOut=Salir
+action.Back=Volver
+action.Submit=Guardar
+error.Empty=El campo no puede estar vacío
+error.Negative=El valor no puede ser menor a 0
+product.Type=Tipo
+product.Measure=Medida
+product.IvaFee=IVA
+product.edit.Title=Modificar Producto
+product.view.Title=Ver Producto
