--- a/src/main/resources/messages_it.properties
+++ b/src/main/resources/messages_it.properties
@@ -29,3 +29,12 @@ login.Title=Login
 main.Title=Maggiore
 main.Welcome=Benvenuto!
 product.create.Title=Crea Prodotto
+action.Back=Ritorno
+action.Submit=Mantenere
+error.Empty=Il campo non può essere vuoto
+error.Negative=Il valore non può essere inferiore a 0
+product.Type=Tipo
+product.Measure=Estensione
+product.IvaFee=IVA
+product.edit.Title=Modifica Prodotto
+product.view.Title=Visualizza Prodotto
