--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -40,3 +40,11 @@ product.Measure=Measure
 product.IvaFee=IVA
 product.edit.Title=Modify Product
 product.view.Title=Product View
+product.type.Product=Product
+product.type.Service=Service
+product.measure.Unit=Unit
+product.measure.Kilogram=Kilogram
+product.measure.Liter=Liter
+product.measure.Meter=Meter
+product.measure.None=None
+error.Max1000=The field cannot be more than 100 characters
