--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -38,3 +38,11 @@ product.Measure=Medida
 product.IvaFee=IVA
 product.edit.Title=Modificar Producto
 product.view.Title=Ver Producto
+product.type.Product=Producto
+product.type.Service=Servicio
+product.measure.Unit=Unidad
+product.measure.Kilogram=Kilogramo
+product.measure.Liter=Litro
+product.measure.Meter=Metro
+product.measure.None=Ninguna
+error.Max1000=El campo no puede poseer más de 100 caracteres
