--- a/src/main/resources/messages_it.properties
+++ b/src/main/resources/messages_it.properties
@@ -38,3 +38,11 @@ product.Measure=Estensione
 product.IvaFee=IVA
 product.edit.Title=Modifica Prodotto
 product.view.Title=Visualizza Prodotto
+product.type.Product=Prodotto
+product.type.Service=Servizio
+product.measure.Unit=Unità
+product.measure.Kilogram=Chilogrammo
+product.measure.Liter=Litro
+product.measure.Meter=Metro
+product.measure.None=Nessuno
+error.Max1000=Il campo non può contenere più di 100 caratteri
