--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,14 +1,14 @@
 
 #-----------------------------------------------------------
-# Product
+# Producto
 #-----------------------------------------------------------
 idioma.Idioma=Languaje
-product.Title = Product
+producto.Title = Product
 
 #Atributos
-product.Code = Code
-product.Description = Description
-product.Price = Price
+producto.Code = Code
+producto.Description = Description
+producto.Price = Price
 
 # Tabla
 table.Action = Action
@@ -22,7 +22,7 @@ action.Confirm=Are you sure?
 idioma.Español=Spanish
 idioma.English=English
 idioma.Italiano=Italian
-product.create.Title=Product Create
+producto.create.Title=Product Create
 header.Home=Home
 header.Products=Products
 login.Title=Sign In
@@ -34,17 +34,17 @@ action.Back=Back
 action.Submit=Submit
 error.Empty=The field cannot be empty
 error.Negative=The value cannot be less than 0
-product.Type=Type
-product.Measure=Measure
-product.Measure=Measure
-product.IvaFee=IVA
-product.edit.Title=Modify Product
-product.view.Title=Product View
-product.type.Product=Product
-product.type.Service=Service
-product.measure.Unit=Unit
-product.measure.Kilogram=Kilogram
-product.measure.Liter=Liter
-product.measure.Meter=Meter
-product.measure.None=None
+producto.Type=Type
+producto.Measure=Measure
+producto.Measure=Measure
+producto.IvaFee=IVA
+producto.edit.Title=Modify Product
+producto.view.Title=Product View
+producto.type.Product=Product
+producto.type.Service=Service
+producto.measure.Unit=Unit
+producto.measure.Kilogram=Kilogram
+producto.measure.Liter=Liter
+producto.measure.Meter=Meter
+producto.measure.None=None
 error.Max1000=The field cannot be more than 100 characters
