--- a/src/main/resources/messages_it.properties
+++ b/src/main/resources/messages_it.properties
@@ -1,12 +1,12 @@
 #-----------------------------------------------------------
-# Product
+# Producto
 #-----------------------------------------------------------
-product.Title=Prodotto
+producto.Title=Prodotto
 
 #Atributos
-product.Code=Codice
-product.Description=Descrizione
-product.Price=Prezzo
+producto.Code=Codice
+producto.Description=Descrizione
+producto.Price=Prezzo
 
 # Tabla
 table.Action=Azioni
@@ -28,21 +28,21 @@ login.Login=Accedere
 login.Title=Login
 main.Title=Maggiore
 main.Welcome=Benvenuto!
-product.create.Title=Crea Prodotto
+producto.create.Title=Crea Prodotto
 action.Back=Ritorno
 action.Submit=Mantenere
 error.Empty=Il campo non può essere vuoto
 error.Negative=Il valore non può essere inferiore a 0
-product.Type=Tipo
-product.Measure=Estensione
-product.IvaFee=IVA
-product.edit.Title=Modifica Prodotto
-product.view.Title=Visualizza Prodotto
-product.type.Product=Prodotto
-product.type.Service=Servizio
-product.measure.Unit=Unità
-product.measure.Kilogram=Chilogrammo
-product.measure.Liter=Litro
-product.measure.Meter=Metro
-product.measure.None=Nessuno
+producto.Type=Tipo
+producto.Measure=Estensione
+producto.IvaFee=IVA
+producto.edit.Title=Modifica Prodotto
+producto.view.Title=Visualizza Prodotto
+producto.type.Product=Prodotto
+producto.type.Service=Servizio
+producto.measure.Unit=Unità
+producto.measure.Kilogram=Chilogrammo
+producto.measure.Liter=Litro
+producto.measure.Meter=Metro
+producto.measure.None=Nessuno
 error.Max1000=Il campo non può contenere più di 100 caratteri
