--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -1,13 +1,13 @@
 #-----------------------------------------------------------
-# Product
+# Producto
 #-----------------------------------------------------------
 idioma.Idioma=Idioma
-product.Title = Producto
+producto.Title = Producto
 
 #Atributos
-product.Code=Código
-product.Description=Descripción
-product.Price = Precio
+producto.Code=Código
+producto.Description=Descripción
+producto.Price = Precio
 
 # Tabla
 table.Action=Acciónes
@@ -21,7 +21,7 @@ action.Confirm=Esta seguro?
 idioma.Español=Español
 idioma.English=Ingles
 idioma.Italiano=Italiano
-product.create.Title=Crear Producto
+producto.create.Title=Crear Producto
 header.Home=Inicio
 header.Products=Productos
 login.Title=Inicio de Sesion
@@ -33,16 +33,16 @@ action.Back=Volver
 action.Submit=Guardar
 error.Empty=El campo no puede estar vacío
 error.Negative=El valor no puede ser menor a 0
-product.Type=Tipo
-product.Measure=Medida
-product.IvaFee=IVA
-product.edit.Title=Modificar Producto
-product.view.Title=Ver Producto
-product.type.Product=Producto
-product.type.Service=Servicio
-product.measure.Unit=Unidad
-product.measure.Kilogram=Kilogramo
-product.measure.Liter=Litro
-product.measure.Meter=Metro
-product.measure.None=Ninguna
+producto.Type=Tipo
+producto.Measure=Medida
+producto.IvaFee=IVA
+producto.edit.Title=Modificar Producto
+producto.view.Title=Ver Producto
+producto.type.Product=Producto
+producto.type.Service=Servicio
+producto.measure.Unit=Unidad
+producto.measure.Kilogram=Kilogramo
+producto.measure.Liter=Litro
+producto.measure.Meter=Metro
+producto.measure.None=Ninguna
 error.Max1000=El campo no puede poseer más de 100 caracteres
