HaciendaSTUB Cliente(en proceso)

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -48,3 +48,10 @@ producto.measure.Liter=Liter
 producto.measure.Meter=Meter
 producto.measure.None=None
 error.Max1000=The field cannot be more than 100 characters
+error.Email=The email does not meet all its specifications
+cliente.Id=Id
+cliente.Name=Name
+cliente.Email=Email
+header.Clientes=Customers
+cliente.create.Title=Create Client
+cliente.view.Title=View Client
