--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -46,3 +46,10 @@ producto.measure.Liter=Litro
 producto.measure.Meter=Metro
 producto.measure.None=Ninguna
 error.Max1000=El campo no puede poseer más de 100 caracteres
+error.Email=El correo no cumple todas sus especificaciones
+cliente.Id=Cédula
+cliente.Name=Nombre
+cliente.Email=Correo Electrónico
+header.Clientes=Clientes
+cliente.create.Title=Crear Cliente
+cliente.view.Title=Ver Cliente
