--- a/src/main/resources/messages_it.properties
+++ b/src/main/resources/messages_it.properties
@@ -46,3 +46,10 @@ producto.measure.Liter=Litro
 producto.measure.Meter=Metro
 producto.measure.None=Nessuno
 error.Max1000=Il campo non può contenere più di 100 caratteri
+error.Email=L'e-mail non soddisfa tutte le sue specifiche
+cliente.Id=Carta d'identità
+cliente.Name=Nome
+cliente.Email=E-mail
+header.Clientes=Clienti
+cliente.create.Title=Crea cliente
+cliente.view.Title=Visualizza Cliente
