--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -55,3 +55,7 @@ cliente.Email=Email
 header.Clientes=Customers
 cliente.create.Title=Create Client
 cliente.view.Title=View Client
+cliente.Title=Customer
+error.Required=Required field
+error.NotFind=Item has not been found
+action.Search=Search
