--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -53,3 +53,8 @@ cliente.Email=Correo Electrónico
 header.Clientes=Clientes
 cliente.create.Title=Crear Cliente
 cliente.view.Title=Ver Cliente
+cliente.Title=Cliente
+error.Required=Campo requerido
+error.NotFind=Elemento no ha sido encontrado\
+action.Search=Buscar
+action.Search=Buscar
