--- a/src/main/resources/messages_it.properties
+++ b/src/main/resources/messages_it.properties
@@ -53,3 +53,7 @@ cliente.Email=E-mail
 header.Clientes=Clienti
 cliente.create.Title=Crea cliente
 cliente.view.Title=Visualizza Cliente
+cliente.Title=Cliente
+error.Required=Campo Obbligatorio
+error.NotFind=L'articolo non è stato trovato
+action.Search=Ricerca
