CSS Basico Correccion footer,header y head

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -61,4 +61,5 @@ cliente.Title=Cliente
 error.Required=Campo requerido
 error.NotFind=Elemento no ha sido encontrado\
 action.Search=Buscar
-action.Search=Buscar
+action.Search=Factura electrónica
+title=Factura electrónica
