--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -59,3 +59,4 @@ cliente.Title=Customer
 error.Required=Required field
 error.NotFind=Item has not been found
 action.Search=Search
+title=Electronic bill
