--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -57,4 +57,5 @@ cliente.Title=Cliente
 error.Required=Campo requerido
 error.NotFind=Elemento no ha sido encontrado\
 action.Search=Buscar
-action.Search=Buscar
+action.Search=Factura electrónica
+title=Factura electrónica
