--- a/src/main/resources/messages_it.properties
+++ b/src/main/resources/messages_it.properties
@@ -57,3 +57,4 @@ cliente.Title=Cliente
 error.Required=Campo Obbligatorio
 error.NotFind=L'articolo non è stato trovato
 action.Search=Ricerca
+title=Fattura elettronica
