--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -60,3 +60,6 @@ error.Required=Required field
 error.NotFind=Item has not been found
 action.Search=Search
 title=Electronic bill
+cliente.TypeId=Customer type
+cliente.TypeFisico=Physical Client
+cliente.TypeJuridico=Legal Client
