--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -61,5 +61,8 @@ cliente.Title=Cliente
 error.Required=Campo requerido
 error.NotFind=Elemento no ha sido encontrado\
 action.Search=Buscar
-action.Search=Factura electrónica
+action.Search=Buscar
 title=Factura electrónica
+cliente.TypeId=Tipo de Cliente
+cliente.TypeFisico=Cliente Físico
+cliente.TypeJuridico=Cliente Jurídico
