--- a/src/main/resources/messages_it.properties
+++ b/src/main/resources/messages_it.properties
@@ -58,3 +58,6 @@ error.Required=Campo Obbligatorio
 error.NotFind=L'articolo non è stato trovato
 action.Search=Ricerca
 title=Fattura elettronica
+cliente.TypeId=Tipo di Cliente
+cliente.TypeFisico=Cliente Fisico
+cliente.TypeJuridico=Cliente legale
