--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -66,3 +66,4 @@ title=Factura electrónica
 cliente.TypeId=Tipo de Cliente
 cliente.TypeFisico=Cliente Físico
 cliente.TypeJuridico=Cliente Jurídico
+header.Facturas=Facturas
