--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -63,3 +63,5 @@ title=Electronic bill
 cliente.TypeId=Customer type
 cliente.TypeFisico=Physical Client
 cliente.TypeJuridico=Legal Client
+
+header.Facturas=Bills
