--- a/src/main/resources/messages_it.properties
+++ b/src/main/resources/messages_it.properties
@@ -61,3 +61,4 @@ title=Fattura elettronica
 cliente.TypeId=Tipo di Cliente
 cliente.TypeFisico=Cliente Fisico
 cliente.TypeJuridico=Cliente legale
+header.Facturas=Fatture
