--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -62,3 +62,4 @@ title=Factura electrónica
 cliente.TypeId=Tipo de Cliente
 cliente.TypeFisico=Cliente Físico
 cliente.TypeJuridico=Cliente Jurídico
+header.Facturas=Facturas
