Correccion Unificacion - Cliente

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -66,4 +66,6 @@ title=Factura electrónica
 cliente.TypeId=Tipo de Cliente
 cliente.TypeFisico=Cliente Físico
 cliente.TypeJuridico=Cliente Jurídico
+cliente.Direccion=Dirección
+cliente.Telefono=Teléfono
 header.Facturas=Facturas
