--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -63,5 +63,7 @@ title=Electronic bill
 cliente.TypeId=Customer type
 cliente.TypeFisico=Physical Client
 cliente.TypeJuridico=Legal Client
+cliente.Direccion=Address
+cliente.Telefono=Phone
 
 header.Facturas=Bills
