--- a/src/main/resources/messages_it.properties
+++ b/src/main/resources/messages_it.properties
@@ -61,4 +61,6 @@ title=Fattura elettronica
 cliente.TypeId=Tipo di Cliente
 cliente.TypeFisico=Cliente Fisico
 cliente.TypeJuridico=Cliente legale
+cliente.Direccion=Indirizzo
+cliente.Telefono=Telefono
 header.Facturas=Fatture
