Correccion Unificacion - Login

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -67,3 +67,9 @@ cliente.Direccion=Address
 cliente.Telefono=Phone
 
 header.Facturas=Bills
+admin.Id=Id
+admin.Name=Name
+admin.Email=Email
+admin.Password=Password
+admin.TypeId=Type of User
+login.SignUp=Not register? Sign up
