--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -75,3 +75,4 @@ admin.Email=Correo Electrónico
 admin.Password=Contraseña
 admin.TypeId=Tipo de usuario
 login.SignUp=¿No esta registrado? Registrese
+signup.Title=Inscribirse
