--- a/src/main/resources/messages_it.properties
+++ b/src/main/resources/messages_it.properties
@@ -70,3 +70,4 @@ admin.Email=E-mail
 admin.Password=Parola d'ordine
 admin.TypeId=Tipo di utente
 login.SignUp=Non ti registri? Iscrizione
+signup.Title=Iscrizione
