--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -71,3 +71,4 @@ admin.Email=Correo Electrónico
 admin.Password=Contraseña
 admin.TypeId=Tipo de usuario
 login.SignUp=¿No esta registrado? Registrese
+signup.Title=Inscribirse
