Factura Direccionamiento y controller correccion
Arreglo del css

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -72,3 +72,4 @@ admin.Password=Contraseña
 admin.TypeId=Tipo de usuario
 login.SignUp=¿No esta registrado? Registrese
 signup.Title=Inscribirse
+factura.Title=Factura
