--- a/src/main/resources/messages_it.properties
+++ b/src/main/resources/messages_it.properties
@@ -71,3 +71,4 @@ admin.Password=Parola d'ordine
 admin.TypeId=Tipo di utente
 login.SignUp=Non ti registri? Iscrizione
 signup.Title=Iscrizione
+factura.Title=Conto
