--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -76,3 +76,4 @@ admin.Password=Contraseña
 admin.TypeId=Tipo de usuario
 login.SignUp=¿No esta registrado? Registrese
 signup.Title=Inscribirse
+factura.Title=Factura
