--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,7 +13,7 @@ producto.Price = Precio
 #-----------------------------------------------------------
 
 # Tabla
-table.Action=Acciónes
+table.Action=Acciones
 
 # Acciones
 action.Create = Crear
