--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -10,7 +10,7 @@ producto.Description=Descripción
 producto.Price = Precio
 
 # Tabla
-table.Action=Acciónes
+table.Action=Acciones
 
 # Acciones
 action.Create = Crear
