--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -75,3 +75,8 @@ admin.TypeId=Type of User
 login.SignUp=Not register? Sign up
 signup.Title=Sign Up
 factura.Title=Bill
+factura.date=Date
+factura.cedulaProveedor=Supplier ID
+factura.cedulaCliente=Customer ID
+factura.tipoPago=Payment Type
+factura.finalPrice=Final Price
