--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -73,3 +73,8 @@ admin.TypeId=Tipo de usuario
 login.SignUp=¿No esta registrado? Registrese
 signup.Title=Inscribirse
 factura.Title=Factura
+factura.date=Fecha
+factura.cedulaProveedor=Cedula del Proveedor
+factura.cedulaCliente=Cedula del Cliente
+factura.tipoPago=Tipo de Pago
+factura.finalPrice=Precio Final
