--- a/src/main/resources/messages_it.properties
+++ b/src/main/resources/messages_it.properties
@@ -72,3 +72,8 @@ admin.TypeId=Tipo di utente
 login.SignUp=Non ti registri? Iscrizione
 signup.Title=Iscrizione
 factura.Title=Conto
+factura.date=Data
+factura.cedulaProveedor=ID Fornitore
+factura.cedulaCliente=ID Cliente
+factura.tipoPago=Tipo di pagamento
+factura.finalPrice=Prezzo finale
