Cambios PDF/XML

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -76,6 +76,7 @@ login.SignUp=Not register? Sign up
 signup.Title=Sign Up
 factura.Title=Bill
 factura.date=Date
+factura.id =ID
 factura.cedulaProveedor=Supplier ID
 factura.cedulaCliente=Customer ID
 factura.tipoPago=Payment Type
