--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -74,6 +74,7 @@ login.SignUp=¿No esta registrado? Registrese
 signup.Title=Inscribirse
 factura.Title=Factura
 factura.date=Fecha
+factura.id=ID
 factura.cedulaProveedor=Cedula del Proveedor
 factura.cedulaCliente=Cedula del Cliente
 factura.tipoPago=Tipo de Pago
