--- a/src/main/resources/messages_it.properties
+++ b/src/main/resources/messages_it.properties
@@ -73,6 +73,7 @@ login.SignUp=Non ti registri? Iscrizione
 signup.Title=Iscrizione
 factura.Title=Conto
 factura.date=Data
+factura.id=ID
 factura.cedulaProveedor=ID Fornitore
 factura.cedulaCliente=ID Cliente
 factura.tipoPago=Tipo di pagamento
