--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -49,6 +49,7 @@ producto.measure.Kilogram=Kilogramo
 producto.measure.Liter=Litro
 producto.measure.Meter=Metro
 producto.measure.None=Ninguna
+proveedor.view.Title=Ver Proveedor
 error.Max1000=El campo no puede poseer más de 100 caracteres
 error.Email=El correo no cumple todas sus especificaciones
 cliente.Id=Cédula
@@ -59,8 +60,7 @@ cliente.create.Title=Crear Cliente
 cliente.view.Title=Ver Cliente
 cliente.Title=Cliente
 error.Required=Campo requerido
-error.NotFind=Elemento no ha sido encontrado\
-action.Search=Buscar
+error.NotFind=Elemento no ha sido encontrado
 action.Search=Buscar
 title=Factura electrónica
 cliente.TypeId=Tipo de Cliente
@@ -77,3 +77,10 @@ admin.TypeId=Tipo de usuario
 login.SignUp=¿No esta registrado? Registrese
 signup.Title=Inscribirse
 factura.Title=Factura
+id=ID
+view.Estado=Estado
+view.Actividad.Comercial=Actividad Comercial
+edit.Profile.Hacienda=Editar perfil ante hacienda
+view.Confirm.New.Password=Confirmar nueva contraseña
+view.New.Password=Nueva contraseña
+view.Update=Actualizar
