--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -81,3 +81,11 @@ factura.cedulaProveedor=Supplier ID
 factura.cedulaCliente=Customer ID
 factura.tipoPago=Payment Type
 factura.finalPrice=Final Price
+proveedor.view.Title=View Supplier
+id=ID
+view.Estado=State
+view.Actividad.Comercial=Business 
+edit.Profile.Hacienda=Edit profile before the treasury
+view.Confirm.New.Password=Confirm new password
+view.New.Password=New password
+view.Update=Update
