--- a/src/main/resources/messages_it.properties
+++ b/src/main/resources/messages_it.properties
@@ -78,3 +78,11 @@ factura.cedulaProveedor=ID Fornitore
 factura.cedulaCliente=ID Cliente
 factura.tipoPago=Tipo di pagamento
 factura.finalPrice=Prezzo finale
+proveedor.view.Title=Visualizza Fornitore
+id=ID
+view.Estado=Stato
+view.Actividad.Comercial=Attività commerciale
+edit.Profile.Hacienda=Modificare il profilo davanti al tesoro
+view.Confirm.New.Password=Conferma nuova parola d'ordine
+view.New.Password=Nuova parola d'ordine
+view.Update=Aggiornare
