--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -79,3 +79,11 @@ factura.cedulaProveedor=Cedula del Proveedor
 factura.cedulaCliente=Cedula del Cliente
 factura.tipoPago=Tipo de Pago
 factura.finalPrice=Precio Final
+proveedor.view.Title=Ver Proveedor
+id=ID
+view.Estado=Estado
+view.Actividad.Comercial=Actividad Comercial
+edit.Profile.Hacienda=Editar perfil ante hacienda
+view.Confirm.New.Password=Confirmar nueva contraseña
+view.New.Password=Nueva contraseña
+view.Update=Actualizar
