--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -29,14 +29,14 @@ login.Title=Sign In
 login.Login=Sing In
 main.Title=Main
 main.Welcome=Welcome!
-header.SingOut=Sing Out
+header.SingOut=Sign Out
 action.Back=Back
 action.Submit=Submit
 error.Empty=The field cannot be empty
 error.Negative=The value cannot be less than 0
 producto.Type=Type
 producto.Measure=Measure
-producto.Measure=Measure
+
 producto.IvaFee=IVA
 producto.edit.Title=Modify Product
 producto.view.Title=Product View
@@ -89,3 +89,5 @@ edit.Profile.Hacienda=Edit profile before the treasury
 view.Confirm.New.Password=Confirm new password
 view.New.Password=New password
 view.Update=Update
+view.title.Admin=Administrator
+view.Disable=Disable
