--- a/src/main/resources/messages_it.properties
+++ b/src/main/resources/messages_it.properties
@@ -86,3 +86,5 @@ edit.Profile.Hacienda=Modificare il profilo davanti al tesoro
 view.Confirm.New.Password=Conferma nuova parola d'ordine
 view.New.Password=Nuova parola d'ordine
 view.Update=Aggiornare
+view.title.Admin=Amministratore
+view.Disable=Disabilitare
