--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -84,3 +84,5 @@ edit.Profile.Hacienda=Editar perfil ante hacienda
 view.Confirm.New.Password=Confirmar nueva contraseña
 view.New.Password=Nueva contraseña
 view.Update=Actualizar
+view.title.Admin=Administrador
+view.Disable=Desactivar
