--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -87,3 +87,5 @@ edit.Profile.Hacienda=Editar perfil ante hacienda
 view.Confirm.New.Password=Confirmar nueva contraseña
 view.New.Password=Nueva contraseña
 view.Update=Actualizar
+view.title.Admin=Administrador
+view.Disable=Desactivar
