--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -91,3 +91,14 @@ view.New.Password=New password
 view.Update=Update
 view.title.Admin=Administrator
 view.Disable=Disable
+search.Product=Search Product to add to the invoice
+view.Id.Product=Enter the product ID
+select.Product=Select the product
+search.Client=Search Client to add product to
+introduce.Id.Client=Enter the client ID
+view.Efectivo=Cash
+view.Tarjeta=Card
+pay.Method=Payment Method
+create.Factura=Create Bill
+select.Client=Select the client
+information.Client=Client Information
