--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -55,8 +55,7 @@ cliente.create.Title=Crear Cliente
 cliente.view.Title=Ver Cliente
 cliente.Title=Cliente
 error.Required=Campo requerido
-error.NotFind=Elemento no ha sido encontrado\
-action.Search=Buscar
+error.NotFind=Elemento no ha sido encontrado
 action.Search=Buscar
 title=Factura electrónica
 cliente.TypeId=Tipo de Cliente
@@ -89,3 +88,14 @@ view.New.Password=Nueva contraseña
 view.Update=Actualizar
 view.title.Admin=Administrador
 view.Disable=Desactivar
+search.Product= Buscar Producto a agregar a la factura
+view.Id.Product=Introduce el ID del producto
+select.Product=Seleccionar Producto
+search.Client=Buscar Cliente al cual agregarle producto
+introduce.Id.Client=Introduce el ID del cliente
+view.Efectivo=Efectivo
+view.Tarjeta=Tarjeta
+pay.Method=Método de Pago
+create.Factura=Crear Factura
+select.Client=Seleccionar Cliente
+information.Client=Información del Cliente
