--- a/src/main/resources/messages_it.properties
+++ b/src/main/resources/messages_it.properties
@@ -88,3 +88,14 @@ view.New.Password=Nuova parola d'ordine
 view.Update=Aggiornare
 view.title.Admin=Amministratore
 view.Disable=Disabilitare
+search.Product=Cerca il prodotto da aggiungere alla fattura
+view.Id.Product=Inserisci l'ID del prodotto
+select.Product=Seleziona il prodotto
+search.Client=Cerca il cliente a cui aggiungere il prodotto
+introduce.Id.Client=Inserisci l'ID del cliente
+view.Efectivo=Contanti
+view.Tarjeta=Carta
+pay.Method=Metodo di pagamento
+create.Factura=Crea fattura
+select.Client=Seleziona il cliente
+information.Client=Informazioni sul cliente
