--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -86,3 +86,14 @@ view.New.Password=Nueva contraseña
 view.Update=Actualizar
 view.title.Admin=Administrador
 view.Disable=Desactivar
+search.Product= Buscar Producto a agregar a la factura
+view.Id.Product=Introduce el ID del producto
+select.Product=Seleccionar Producto
+search.Client=Buscar Cliente al cual agregarle producto
+introduce.Id.Client=Introduce el ID del cliente
+view.Efectivo=Efectivo
+view.Tarjeta=Tarjeta
+pay.Method=Método de Pago
+create.Factura=Crear Factura
+select.Client=Seleccionar Cliente
+information.Client=Información del Cliente
