--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,7 +4,7 @@
 producto.Title = Producto
 
 #Atributos Producto
-producto.Code=Código
+producto.Id = ID
 producto.Description=Descripción
 producto.Price = Precio
 
