--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -5,7 +5,7 @@ idioma.Idioma=Idioma
 producto.Title = Producto
 
 #Atributos
-producto.Code=Código
+producto.Id = ID
 producto.Description=Descripción
 producto.Price = Precio
 
