--- a/src/main/resources/messages_it.properties
+++ b/src/main/resources/messages_it.properties
@@ -4,7 +4,7 @@
 producto.Title=Prodotto
 
 #Atributos
-producto.Code=Codice
+producto.Id=ID
 producto.Description=Descrizione
 producto.Price=Prezzo
 
@@ -40,14 +40,14 @@ producto.edit.Title=Modifica Prodotto
 producto.view.Title=Visualizza Prodotto
 producto.type.Product=Prodotto
 producto.type.Service=Servizio
-producto.measure.Unit=Unit√†
+producto.measure.Unit=Unit√ 
 producto.measure.Kilogram=Chilogrammo
 producto.measure.Liter=Litro
 producto.measure.Meter=Metro
 producto.measure.None=Nessuno
 error.Max1000=Il campo non pu√≤ contenere pi√π di 100 caratteri
 error.Email=L'e-mail non soddisfa tutte le sue specifiche
-cliente.Id=Carta d'identit√†
+cliente.Id=Carta d'identit√ 
 cliente.Name=Nome
 cliente.Email=E-mail
 header.Clientes=Clienti
@@ -81,7 +81,7 @@ factura.finalPrice=Prezzo finale
 proveedor.view.Title=Visualizza Fornitore
 id=ID
 view.Estado=Stato
-view.Actividad.Comercial=Attivit√† commerciale
+view.Actividad.Comercial=Attivit√  commerciale
 edit.Profile.Hacienda=Modificare il profilo davanti al tesoro
 view.Confirm.New.Password=Conferma nuova parola d'ordine
 view.New.Password=Nuova parola d'ordine
