--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,4 +1,3 @@
-
 #-----------------------------------------------------------
 # Producto
 #-----------------------------------------------------------
@@ -6,7 +5,7 @@ idioma.Idioma=Languaje
 producto.Title = Product
 
 #Atributos
-producto.Code = Code
+producto.ID = ID
 producto.Description = Description
 producto.Price = Price
 
